<resources>
    <string name="app_name">PopularMovies</string>
    <string name="api">798a6a862c286e9b276d7f7dcbef2ca4</string>
    <string name="content_desc_movie_poster">Movie Poster</string>
    <string name="string_sort_by">Sort By</string>
    <string name="string_popularity">Popularity</string>
    <string name="string_highest_rated">Highest Rated</string>
    <string name="string_release_date">Release Date:</string>
    <string name="string_rating">Rating:</string>
    <string name="content_thumbnail">content_backdrop</string>
    <string name="content_backdrop">content_backdrop</string>
    <string name="content_grid_thumbnail">content_thumbnail</string>
    <string name="string_cd_trailer">Trailer</string>
    <string name="string_trailers">Trailers and Videos:</string>
    <string name="activity_image_trans">thumb</string>
    <string name="string_review_network_error">Network Error</string>
    <string name="string_reviews">Reviews:</string>
    <string name="string_review_format" formatted="false">Author: %s \n\n%s…\n\n(Click to view rest)</string>
    <string name="string_no_reviews">No reviews yet.</string>
    <string name="string_favorite">Favorite</string>
    <string name="string_share_trailer">Share Trailer</string>
    <string name="string_trailer_not_loaded">Trailers not loaded</string>
    <string name="string_menu_favorites_only">Favorites Only</string>
    <string name="string_no_favorites">No favorites</string>
</resources>
