<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context="com.xipherlabs.popularmovies.MovieDetailsActivity">

    <ImageView
        android:id="@+id/backdrop"
        android:scaleType="centerCrop"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/content_backdrop" />
    <ScrollView
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <TextView
                android:id="@+id/title"
                android:textColor="@android:color/white"
                android:textSize="@dimen/font_size_large"
                android:layout_marginTop="@dimen/vertical_margin"
                android:layout_marginLeft="@dimen/horizontal_margin"
                android:layout_marginRight="@dimen/horizontal_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Movie Title" />


            <ImageView
                android:id="@+id/thumbnail"
                android:transitionName="@string/activity_image_trans"
                android:layout_width="180dp"
                android:layout_height="270dp"
                android:scaleType="centerCrop"
                android:layout_marginTop="@dimen/vertical_margin"
                android:layout_marginLeft="@dimen/horizontal_margin"
                android:layout_below="@id/title"
                android:contentDescription="@string/content_thumbnail" />

            <TextView
                android:layout_marginLeft="@dimen/horizontal_margin"
                android:layout_marginRight="@dimen/horizontal_margin"
                android:layout_marginTop="@dimen/vertical_margin"
                android:id="@+id/relDateTitle"
                android:layout_toRightOf="@id/thumbnail"
                android:text="@string/string_release_date"
                android:textColor="@android:color/white"
                android:layout_alignTop="@id/thumbnail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_marginLeft="@dimen/horizontal_margin"
                android:layout_marginRight="@dimen/horizontal_margin"
                android:id="@+id/relDate"
                android:layout_toRightOf="@id/thumbnail"
                android:layout_below="@id/relDateTitle"
                android:textColor="@android:color/white"
                android:textSize="@dimen/font_size_std"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_marginLeft="@dimen/horizontal_margin"
                android:layout_marginRight="@dimen/horizontal_margin"
                android:layout_marginTop="@dimen/vertical_margin"
                android:id="@+id/ratingTitle"
                android:layout_toRightOf="@id/thumbnail"
                android:text="@string/string_rating"
                android:textColor="@android:color/white"
                android:layout_below="@id/relDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_marginLeft="@dimen/horizontal_margin"
                android:layout_marginRight="@dimen/horizontal_margin"
                android:id="@+id/rating"
                android:layout_toRightOf="@id/thumbnail"
                android:layout_below="@id/ratingTitle"
                android:textColor="@android:color/white"
                android:textSize="@dimen/font_size_std"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/overview"
                android:layout_below="@id/thumbnail"
                android:layout_marginTop="@dimen/vertical_margin"
                android:paddingBottom="@dimen/vertical_margin"
                android:textColor="@android:color/white"
                android:textSize="@dimen/font_size_std"
                android:layout_marginLeft="@dimen/horizontal_margin"
                android:layout_marginRight="@dimen/horizontal_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_below="@id/overview">

                <TextView
                    android:id="@+id/trailerTitle"
                    android:text="@string/string_trailers"
                    android:layout_marginRight="@dimen/std_horizontal_margin"
                    android:layout_marginLeft="@dimen/std_horizontal_margin"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/font_size_std"
                    android:layout_width="match_parent" />

                <HorizontalScrollView
                    android:layout_marginLeft="@dimen/std_horizontal_margin"
                    android:layout_marginRight="@dimen/std_horizontal_margin"
                    android:layout_marginTop="@dimen/std_vertical_margin"
                    android:layout_marginBottom="@dimen/std_vertical_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:id="@+id/trailerView"
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <ImageView
                            tools:src="@mipmap/ic_launcher"
                            android:layout_width="170dp"
                            android:scaleType="fitCenter"
                            android:layout_height="128dp"
                            android:layout_marginEnd="@dimen/std_horizontal_margin"
                            android:contentDescription="@string/string_cd_trailer" />
                        <ImageView
                            tools:src="@mipmap/ic_launcher"
                            android:layout_width="170dp"
                            android:scaleType="fitCenter"
                            android:layout_height="128dp"
                            android:layout_marginEnd="@dimen/std_horizontal_margin"
                            android:contentDescription="@string/string_cd_trailer" />
                    </LinearLayout>

                </HorizontalScrollView>

                <TextView
                    android:id="@+id/reviewTitle"
                    android:text="@string/string_reviews"
                    android:layout_marginRight="@dimen/std_horizontal_margin"
                    android:layout_marginLeft="@dimen/std_horizontal_margin"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/font_size_std"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent" />


                <HorizontalScrollView
                    android:id="@+id/reviewScrollView"
                    android:layout_marginLeft="@dimen/std_horizontal_margin"
                    android:layout_marginRight="@dimen/std_horizontal_margin"
                    android:layout_marginTop="@dimen/std_vertical_margin"
                    android:layout_marginBottom="@dimen/std_vertical_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:id="@+id/reviewView"
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:textColor="@android:color/white"
                            android:layout_height="wrap_content"
                            android:maxLines="20"
                            android:layout_marginEnd="@dimen/std_horizontal_margin"
                            android:ellipsize="end"
                            android:background="?attr/selectableItemBackground"
                            android:layout_width="240dp" />


                    </LinearLayout>

                </HorizontalScrollView>
            </LinearLayout>

        </RelativeLayout>

    </ScrollView>


</RelativeLayout>